WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288189
REGRESSION(
290260@main
) [GTK] inspector never starts attached and can't be attached
https://bugs.webkit.org/show_bug.cgi?id=288189
Summary
REGRESSION(290260@main) [GTK] inspector never starts attached and can't be at...
Carlos Garcia Campos
Reported
2025-02-21 02:42:34 PST
Since
290260@main
WebInspector::canAttachWindow() is no longer used, so we need to implement platformCanAttach() in WebInspectorUIProxyGtk.cpp
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-02-21 02:45:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41051
EWS
Comment 2
2025-02-24 01:27:45 PST
Committed
290937@main
(5c418bb48b6d): <
https://commits.webkit.org/290937@main
> Reviewed commits have been landed. Closing PR #41051 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug