REGRESSION(290260@main) [GTK] inspector never starts attached and can't be attached https://bugs.webkit.org/show_bug.cgi?id=288189

Reviewed by Adrian Perez de Castro.

Since 290260@main WebInspector::canAttachWindow() is no longer used, so
we need to implement platformCanAttach() in WebInspectorUIProxyGtk.cpp.

* Source/WebKit/UIProcess/Inspector/WebInspectorUIProxy.h:
* Source/WebKit/UIProcess/Inspector/gtk/WebInspectorUIProxyGtk.cpp:
(WebKit::WebInspectorUIProxy::platformCanAttach):
(WebKit::WebInspectorUIProxy::platformAttach):

Canonical link: https://commits.webkit.org/290937@main